<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">ClimApp</string>

    <!--Para refrescar datos-->
    <string name="action_refresh">Recargar</string>

    <string name="error_message">
        Ocurrio un error. Por favor vuelva a intentarlo.
    </string>

    <string name="action_map">Ubicacion</string>

    <string name="action_share">Compartir</string>

    <string name="action_settings">Configuracion</string>

    <string name="content_authority">ar.com.tesina.climapp</string>

    <!-- - - - - - - - - - - - - - - -->
    <!-- MENU NUEVO -->
    <!-- - - - - - - - - - - - - - - -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_click">Title click</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_city">Ciudades</string>
    <string name="menu_add_city">Agregar una ubicación nueva</string>

    <!-- - - - - - - - - - - - - - - -->
    <!-- Util para manejo de Fechas  -->
    <!-- - - - - - - - - - - - - - - -->
    <string name="today">Hoy</string>
    <string name="tomorrow">Mañana</string>

    <string name="format_full_friendly_date">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>

    <string name="format_temperature_celsius">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0C
    </string>

    <string name="format_temperature_fahrenheit">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0F
    </string>

    <string name="wind_label">Viento</string>

    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="humidity_label">Humedad</string>
    <string name="format_humidity">
        <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>

    <string name="pressure_label">Presion</string>
    <string name="format_pressure">
        <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

    <!-- - - - - - - - - - - - - - - - -->
    <!--Para el menu de configuracion  -->
    <!-- - - - - - - - - - - - - - - - -->
    <string name="pref_location_label">Ubicacion</string>
    <string name="pref_location_key" translatable="false">ubicacion</string>
    <string name="pref_location_default" translatable="false">La Plata,AR</string>
    <string name="pref_units_label">Unidad de medicion</string>
    <string name="pref_units_label_metric">Grados Centigrados</string>
    <string name="pref_units_label_imperial">Grados Farenheit</string>
    <string name="pref_units_key" translatable="false">unidad</string>
    <string name="pref_units_metric" translatable="false">centigrados</string>
    <string name="pref_units_imperial" translatable="false">farenheit</string>

    <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_2xx">Tormenta</string>
    <string name="condition_3xx">Llovizna</string>
    <string name="condition_500">Lluvia Suave</string>
    <string name="condition_501">Lluvia Moderada</string>
    <string name="condition_502">Lluvia Intensa</string>
    <string name="condition_503">Lluvia Intensa</string>
    <string name="condition_504">Lluvia Fuerte</string>
    <string name="condition_511">Lluvia</string>
    <string name="condition_520">Lluvia Fina</string>
    <string name="condition_521">Lluvia</string>
    <string name="condition_522">Lluvia</string>
    <string name="condition_531">Lluvia</string>
    <string name="condition_600">Nieve Suave</string>
    <string name="condition_601">Nieve</string>
    <string name="condition_602">Nieve Fuerte</string>
    <string name="condition_611">Aguanieve</string>
    <string name="condition_612">Aguanieve</string>
    <string name="condition_615">Lluvia y Nieve</string> <!-- light rain and snow -->
    <string name="condition_616">Lluvia y Nieve</string>
    <string name="condition_620">Nieve</string> <!-- light shower snow -->
    <string name="condition_621">Nieve</string>
    <string name="condition_622">Nieve</string> <!-- heavy shower snow -->
    <string name="condition_701">Niebla</string>
    <string name="condition_711">Humo</string>
    <string name="condition_721">Neblina</string>
    <string name="condition_731">Arena, Polvo</string>
    <string name="condition_741">Niebla</string>
    <string name="condition_751">Arena</string>
    <string name="condition_761">Polvo</string>
    <string name="condition_762">Ceniza Volcanica</string>
    <string name="condition_771">Rafagas</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Despejado</string>
    <string name="condition_801">Mayormente Despejado</string>
    <string name="condition_802">Parcialmente Nublado</string>
    <string name="condition_803">Nublado</string>
    <string name="condition_804">Nublado</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tormenta Tropical</string>
    <string name="condition_902">Huracan</string>
    <string name="condition_903">Frio</string>
    <string name="condition_904">Calor</string>
    <string name="condition_905">Ventoso</string>
    <string name="condition_906">Granizo</string>
    <string name="condition_951">Despejado</string>
    <string name="condition_952">Brisa Suave</string>
    <string name="condition_953">Brisa</string>
    <string name="condition_954">Brisa Moderada</string> <!-- moderate breeze -->
    <string name="condition_955">Brisa Fresca</string>
    <string name="condition_956">Brisa Fuerte</string>
    <string name="condition_957">Viento Alto</string>
    <string name="condition_958">Vendaval</string>
    <string name="condition_959">Vendaval Severo</string>
    <string name="condition_960">Tormenta</string>
    <string name="condition_961">Tormenta Fuerte</string>
    <string name="condition_962">Huracan</string>

    <string name="condition_unknown">Desconocido (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
    <string name="title_activity_detail">DetailActivity</string>


    <!-- - - - - - - - - - - -->
    <!-- Used by NetworkUtils-->
    <!-- - - - - - - - - - - -->
    <!--NONE-->

    <!-- - - - - - - - - - - - - - - -->
    <!-- Used by OpenWeatherJsonUtils-->
    <!-- - - - - - - - - - - - - - - -->
    <!--NONE-->

    <!-- - - - - - - - - - - - - - -->
    <!--Used by SunshinePreferences-->
    <!-- - - - - - - - - - - - - - -->
    <!--NONE-->

    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>

    <string name="pref_last_notification">last_notification</string>

    <string name="format_notification">
        Pronostico:<xliff:g id="condition">%1$s</xliff:g> -
        Max:<xliff:g id="high">%2$s</xliff:g>
        Min:<xliff:g id="low">%3$s</xliff:g>
    </string>

</resources>
